# TextSLAM

./: CMakeLists.txt  README.md  main.cpp
include/: ModelTool.hpp  auto_BAScene.h  auto_BASceneNW.h  auto_IniBAScene.h  auto_PoseOptimScene.h  auto_RhoScene.h  auto_sim.h  auto_siminv.h  nume_BAText.h  nume_IniBAText.h  nume_PoseOptimText.h  nume_thetaText.h  numer_loop_ver2.h
src/: ORBextractor.cc  ORBextractor.h  Sim3Solver.cc  Sim3Solver.h  frame.cc  frame.h  initializer.cc  initializer.h  keyframe.cc  keyframe.h  loopClosing.cc  loopClosing.h  map.cc  map.h  mapPts.cc  mapPts.h  mapText.cc  mapText.h  optimizer.cc  optimizer.h  setting.cc  setting.h  system.cc  system.h  tool.cc  tool.h  tracking.cc  tracking.h
yaml/: AIndoorLoop.yaml  GeneralMotion.yaml  LIndoorLoop.yaml  Outdoor.yaml
